--- a/app/src/index.css
+++ b/app/src/index.css
@@ -5,5 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: aliceblue;
+  /* background-color: aliceblue; */
+}
+
+*::selection {
+  color: white;
+  background: #87caf6;
+  font-weight: bold;
 }
